<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:id="@+id/headerLayout"
        android:background="#673AB7"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/signupHeader"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:text="Sign-Up Page"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />


    </LinearLayout>

    <EditText
        android:id="@+id/signupName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="44dp"
        android:hint="Enter name here.."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout" />

    <EditText
        android:id="@+id/signupEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="44dp"
        android:hint="Enter email here.."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupName" />

    <EditText
        android:id="@+id/signupNumber"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:hint="Enter phone number here.."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupEmail" />

    <Spinner
        android:id="@+id/signupRole"
        android:layout_width="200dp"
        android:layout_height="30sp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="44dp"
        android:entries="@array/selectRolesArray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupNumber" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Name"
        android:textColor="#673AB7"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/signupName"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="Email"
        android:textColor="#673AB7"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/signupEmail"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="Phone(Optional)"
        android:textColor="#673AB7"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/signupNumber"
        app:layout_constraintHorizontal_bias="0.702"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <TextView
        android:id="@+id/textViewRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="Role"
        android:textColor="#673AB7"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/signupRole"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumber" />

    <Button
        android:id="@+id/buttonSignUP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        android:text="Sign-Up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupRole" />

</androidx.constraintlayout.widget.ConstraintLayout>